{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 22,
  "lineage": "237cef53-c9c2-9732-fe5e-441cf912a49c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh",
            "location": "northeurope",
            "name": "ssh",
            "resource_group_name": "rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/16",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/routeTables/MyRouteTable/routes/acceptanceTestRoute1",
            "name": "acceptanceTestRoute1",
            "next_hop_in_ip_address": "",
            "next_hop_type": "VnetLocal",
            "resource_group_name": "rg1",
            "route_table_name": "MyRouteTable",
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_route_table.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/routeTables/MyRouteTable",
            "location": "northeurope",
            "name": "MyRouteTable",
            "resource_group_name": "rg1",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "import",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
            "name": "subnet1",
            "network_security_group_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh",
            "resource_group_name": "rg1",
            "virtual_network_name": "acctvnet"
          }
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet2",
            "name": "subnet2",
            "network_security_group_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh",
            "resource_group_name": "rg1",
            "service_endpoints": [
              "Microsoft.Storage",
              "Microsoft.Sql"
            ],
            "virtual_network_name": "acctvnet"
          }
        },
        {
          "index_key": "subnet3",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet3",
            "name": "subnet3",
            "network_security_group_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh",
            "resource_group_name": "rg1",
            "service_endpoints": [
              "Microsoft.AzureActiveDirectory"
            ],
            "virtual_network_name": "acctvnet"
          }
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "rg1",
            "virtual_network_name": "acctvnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet2",
            "name": "subnet2",
            "resource_group_name": "rg1",
            "service_endpoints": [
              "Microsoft.Storage",
              "Microsoft.Sql"
            ],
            "virtual_network_name": "acctvnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet3",
            "name": "subnet3",
            "resource_group_name": "rg1",
            "service_endpoints": [
              "Microsoft.AzureActiveDirectory"
            ],
            "virtual_network_name": "acctvnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
            "network_security_group_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.ssh",
            "azurerm_resource_group.example",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet",
            "module.vnet.data.azurerm_subnet.import"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet2",
            "network_security_group_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.ssh",
            "azurerm_resource_group.example",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet",
            "module.vnet.data.azurerm_subnet.import"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet3",
            "network_security_group_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet3"
          },
          "dependencies": [
            "azurerm_network_security_group.ssh",
            "azurerm_resource_group.example",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet",
            "module.vnet.data.azurerm_subnet.import"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
            "route_table_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/routeTables/MyRouteTable",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.ssh",
            "azurerm_resource_group.example",
            "azurerm_route_table.example",
            "module.vnet.data.azurerm_subnet.import"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet2",
            "route_table_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/routeTables/MyRouteTable",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.ssh",
            "azurerm_resource_group.example",
            "azurerm_route_table.example",
            "module.vnet.data.azurerm_subnet.import"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet3",
            "route_table_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/routeTables/MyRouteTable",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet3"
          },
          "dependencies": [
            "azurerm_network_security_group.ssh",
            "azurerm_resource_group.example",
            "azurerm_route_table.example",
            "module.vnet.data.azurerm_subnet.import"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "b2bb8983-f748-4c86-83e4-99027e9f9433",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet",
            "location": "northeurope",
            "name": "acctvnet",
            "resource_group_name": "rg1",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet2",
                "name": "subnet2",
                "security_group": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet3",
                "name": "subnet3",
                "security_group": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh"
              }
            ],
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    }
  ]
}